primary and secondary influences - and editing down

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -492,8 +492,9 @@ The use of paper prototypes was one technique used by several parents to support
 ![](./Pictures/vign_a_1.png)
 ![Graphical representation of code]({{ site.baseurl }}/Pictures/vign_a_1.png)
 
-The way the code is structured has been chosen to allow a graphical analogue between the lines of code in the form of a comMark  separated array and the appearance of the resulting game output on the screen. The parent uses the graphical representation of design in the code template as a jumping off point to make a connection to home practice of sketching things out in paper. The process of turn the sketched into reality on the screen and sharing with others appears to be transformative in terms of the engagement level of the child.
+The way the code is structured has been chosen to allow a graphical analogue between the lines of code in the form of a comma separated array and the appearance of the resulting game output on the screen. The parent uses the graphical representation of design in the code template as a jumping off point to make a connection to home practice of sketching things out in paper. The process of turn the sketched into reality on the screen and sharing with others appears to be transformative in terms of the engagement level of the child.
 
+ADD IN A SUMMARY OF THE POST INTERVIEW DATA BELOW TO UNDERLINE THIS POINT.
 
 
 <!-- NOTE - RETURN TO THIS IN ANALYSIS OF TADS - -->
@@ -505,20 +506,20 @@ Somethinkg about more direct link between code and output. - as with block codin
 
 <!-- There are other examples of the use of paper prototyping of GDPs being used by parents to provide scaffolding for their children. When invited to share about their design process in a post session interview, Ed and Mark  also discuss the use of paper to clarify initial GDP ideas in interview data. When asked if they were able to Mark  prompts
 
-    Molly: Tell me a  bit  how you came up with those aims in your game, in terms of coming up with a plan.
+    Mick: Tell me a  bit  how you came up with those aims in your game, in terms of coming up with a plan.
     Mark: What for the things that we need to do to it to finish it?
-    Molly: Yeah. Oh, just even from the beginning point. How did you plan together as well?
+    Mick: Yeah. Oh, just even from the beginning point. How did you plan together as well?
     Mark: Well we started off on paper didn’t we. That's the first thing we did. I think it was a benefit actually. We, we did a lot of sketching didn’t we and a lot of brainstorming ideas and seeing and trying to test out whether it would work.
 
 Later in the interaction, the parent outlines a different use of prototyping, that of sketching directly into software. For this pair, the child appears to prefer sketching directly into software. The father also appreciates potential problems of translating ideas from paper into a digital format.
 
     Mark: I was very excited by seeing Ed playing with this because it's interesting that everything doesn't have to be a paper and pen.
     It's nice to just for the kids to feel that they can sketch on Piskel straight off the bat without taking a tutorial or being told by an adult.  It's really intuitive and you just go straight into it.
-    Molly: That's an interesting thing because in some ways it started off with people working on paper because I thought that would be really accessible. Yeah. And maybe it was through observations of people just going “Do you know what I’m just happy sketching on Piskel”.
-    Mark: (Animatedly) The kids, all the kids I saw not just Fi.
-    Molly: Digital sketching.
+    Mick: That's an interesting thing because in some ways it started off with people working on paper because I thought that would be really accessible. Yeah. And maybe it was through observations of people just going “Do you know what I’m just happy sketching on Piskel”.
+    Mark: (Animatedly) The kids, all the kids I saw not just Ed.
+    Mick: Digital sketching.
     Mark: Yeah.
-    Molly: It seemed to have value in that you were just doing it in the same format that you would use for the game.
+    Mick: It seemed to have value in that you were just doing it in the same format that you would use for the game.
 
     Mark:   Yeah. I think it's really important. I think the pencil and pen thing just didn't work did it. We sketched... It's got its place. But it's, the kids weren't that interested in using the graph paper to block out Piskel. It didn't translate. It was just easier to block it out straight in software. -->
 
@@ -553,11 +554,8 @@ In summary, some GDPs allow the spacial exploration of design in a way that suit
 The following exchange between participants Ed and Mark  shows GDPs being used to try to organise future activity.
 <!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
 
-At this stage of their process, some of these patterns have been discussed and sketched out some started but only partially completed. For example, the child has designed different frames of animation but this has not been exported to the right format or implemented in code form. This interchange shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done. This tension is outlined when a parent Mark gives an update on progress. "So, we’ve made quite a lot of progress this week. I think the issue we’re having is that Fi’s super excited so we’re kind of jumping from one thing to another and that’s kinda overwhelming me a bit."
+At this stage of their process, some of these patterns have been discussed and sketched out some started but only partially completed. For example, the child has designed different frames of animation but this has not been exported to the right format or implemented in code form. This interchange shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done. This tension is outlined when a parent Mark gives an update on progress. "So, we’ve made quite a lot of progress this week. I think the issue we’re having is that Fi’s super excited so we’re kind of jumping from one thing to another and that’s kinda overwhelming me a bit." An earlier interaction illustrates this dynamic clearly.
 
-An earlier interaction illustrates this.
-
-    TURN IN TO TABLE WITH DESCRIPTION?
     Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
     Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
     Mark: So you want to get your person animated that’s the main thing.
@@ -616,7 +614,7 @@ CHECK FOR OVERLAP-->
 
 This section explores different approaches to division of labour. Mark and Ed work closely together, Suzanne helps Olivia alternate between points of low and high engagement with coding process, and Molly and her daughter Nadine are work on different projects in different parts of the room but still interact at key points.
 
-**Working knowlege of GDPs can help participants to divide project elements**
+**Working knowledge of GDPs can help participants to divide project elements**
 
 In the last section, Mark and Ed used GDPs to attempt to prioritise work. However, following this Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In the next exchange, they progress to more successfully divide their labour informally.
 
@@ -683,7 +681,7 @@ These examples illustrate the varied strategies to  divisions of labour that par
     Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
     Parent peer laughs
     Nadine bounces up in place and smiles broadly.
-    Mi- Thanks
+    Molly: Thanks
     Molly: So am I like back with the black now?
     Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
     Molly: Oh X. Alright Bubs. Thanks.
@@ -715,7 +713,7 @@ This example shows  a practical division of labour based on the building of emer
 
 <!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
 
-<!-- In a following example we see child Nadine helping her mother to overcome coding blockages. -->**
+<!-- In a following example we see child Nadine helping her mother to overcome coding blockages. -->
 <!--
 A SECTION HERE THAT COULD BE REPLACED.
 
@@ -740,46 +738,21 @@ NOTE - check if this fits
 Once the code for the new game mechanic has been added, the child is guided to take on challenge of making smaller changes that give rapid feedback.  To aid the process the parent navigates to a particular part of the code for child to alter design. The changes the child makes have a large impact on the end users experience.
  -->
 
+### The role of GDP used in emerging tool use, technical processes and specialist language
 
-
-### GDP used to guide tool use and emerging technical processes
-
-**The emergence and propagation of new technical processes particularly in tool use, motivated by a drive to implement or complete a GDP often happen informally between peers.**
+The emergence, use and propagation of new technical processes motivated by a drive to implement or complete a GDP often happen informally between peers.
 
 The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
 
 
-
-
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
 
+In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
+demonstration agency or growing status within this community.
 
-THERE IS CROSS OVER HERE WITH CHAPTER 4 - WHAT DOES THIS ADD? HOW TO COMPRESS IT?
-In this interaction the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative demonstration agency or growing status within this community.
+THERE IS CROSS OVER HERE WITH CHAPTER 4 - ACTION TO OPERATION - WHAT DOES THIS ADD? HOW TO COMPRESS IT?
 
-We can explore this behaviour from the child's perspective using terms from Activity Theory. The process of exporting and importing has become an 'operation' for Nadine through repeated practice.  We can see that the operation of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on. Molly also benefits, as she is able to draw on the expertise of her child to undertake that process. She is also keen to develop her own competency as indicated by her asking child to explain the process.
-
-<!-- While the final an operation for some participants it would be a more conscious process, for others it has become second nature. -->
-<!-- This is seen in a similar example. As a common example the process of "getting it in the game".
-
-    Molly - Nadine !, Nadine ! Nadine .
-
-    Molly: Do you know how to get it in the game?
-    Nadine : Oh my god!
-    Molly: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved?   Right now export it.
-    Nadine : Do you even know what export means?
-    Molly: I know what export means!
-    Nadine - Ok then smartie pants.
-
-the interaction also shows positive affect of child.
-her role in the community can be explored here. -->
-
-
-
-#### Use of evolving GDP terminology to facilitate design practices -
-
-NOTE - IS THERE ENOUGH HERE FOR A WHOLE SECTION? Is this cultural?
-NOTE - IT ADDRESSES EMERGING NORMS IN THE DESIGN
+We can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
 
 **Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
 
@@ -808,17 +781,39 @@ The mother wants to export an image from the graphical editing tool and to impor
 The mother develops her proficiency of expressing GDP related concepts and language as this interaction develops. This may be to show her increased level of understanding and participation on overall process after being challenged by daughter about her use of technical language. "Do you even know what export means?". Nadine also appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
 
 
+<!-- While the final an operation for some participants it would be a more conscious process, for others it has become second nature. -->
+<!-- This is seen in a similar example. As a common example the process of "getting it in the game".
 
+    Molly - Nadine !, Nadine ! Nadine .
+
+    Molly: Do you know how to get it in the game?
+    Nadine : Oh my god!
+    Molly: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved?   Right now export it.
+    Nadine : Do you even know what export means?
+    Molly: I know what export means!
+    Nadine - Ok then smartie pants.
+
+the interaction also shows positive affect of child.
+her role in the community can be explored here. -->
 
 
 #### Other examples of GDP driving adoption of technical processes
 
 References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
 
-While this  is also a secondary example - more on digital design being driven by key features- it does intersect with the concepts of GDPs as they are used here to explain a technical concepts with a concrete example of experience.
+There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
+In describing this research it is important to avoid overreach when describing the possible utility of GDPs by making a disctintion between primary and secondary involvement of GDPS in technical processes.
 
-NOTE - COVERT TO TABLE -
+Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
+
+Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
+
+Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the proess in more indirect.
+
+The following example for the most part covers a the technical process of removing redundant space from around art in graphical editors. However the process becomes much clearer to Molly when linked directly to here experience of a game design pattern of altering the sprites hit box.
+
+<!-- NOTE - COVERT TO TABLE? -->
 
     Ed: for people with background like yours You can use the cramping tool.
     Ed leads Molly to his workstation and involves his father in the process.
@@ -827,7 +822,7 @@ NOTE - COVERT TO TABLE -
     Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
     Mark: And you’re floating?
     Molly: Yeah. Yeah that’s what’s happening. So..
-    Mark: So you can put you’re sprite back in again and you can crop it down.
+    Mark: So you can put your sprite back in again and you can crop it down.
 
 <!-- Mark: Show what? What are we doing?
 Ed: On this one it’s like this.
@@ -840,8 +835,6 @@ Ed: People have used the whole block.
 Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
 Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
  -->
-
-There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
 
 
