--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -25,15 +25,15 @@
             process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-    -   [GDP used to guide tool use and emerging technical
-        processes](#gdp-used-to-guide-tool-use-and-emerging-technical-processes)
+    -   [The role of GDP used in emerging tool use, technical processes
+        and specialist
+        language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
         -   [Other examples of GDP driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-        -   [Use of evolving GDP terminology to facilitate design
-            practices
-            -](#use-of-evolving-gdp-terminology-to-facilitate-design-practices--)
     -   [Use of GDPs to support debugging and the product revision
         process](#use-of-gdps-to-support-debugging-and-the-product-revision-process)
+        -   [Code Patching as a guided
+            process](#code-patching-as-a-guided-process)
         -   [GDPs used to nurture tactical responses to errors and
             blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
 -   [Cultural Dimension](#cultural-dimension)
