--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,6 +9,8 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
+
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
@@ -19,38 +21,33 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         A](#descriptive-commentary-on-vignette-a)
 -   [Observations and analysis of use of Game Design Patterns by
     participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
--   [Personal Appropriation](#personal-appropriation)
-    -   [GDPs used to explore computational, design and systems concepts
-        from a perspective of personal
-        appropriation](#gdps-used-to-explore-computational-design-and-systems-concepts-from-a-perspective-of-personal-appropriation)
--   [Guided Participation](#guided-participation)
+-   [Guided Particpation](#guided-particpation)
+    -   [GDPs used to scaffold ideation
+        processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [GDPs as used by participants in their prioritisation in the
+            design
+            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-design-process)
     -   [GDPs offer the potential to assist project navigation, acting
         as a framework for code examples and step-by-step
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-    -   [GDPs used to scaffold ideation
-        processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [Paper prototyping mapping visual
-            matrix](#paper-prototyping-mapping-visual-matrix)
-        -   [GDPs as used by participants in their prioritisation in the
-            ideation
-            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-    -   [GDP used to guide tool use and emerging technical
-        processes](#gdp-used-to-guide-tool-use-and-emerging-technical-processes)
-        -   [Other examples of GDP driving adoption of technical
-            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-        -   [Use of evolving GDP terminology to facilitate design
-            practices
-            -](#use-of-evolving-gdp-terminology-to-facilitate-design-practices--)
-    -   [Use of GDPs to support debugging and the product revision
-        process](#use-of-gdps-to-support-debugging-and-the-product-revision-process)
+    -   [GDP driving adoption of emerging technical
+        processes](#gdp-driving-adoption-of-emerging-technical-processes)
         -   [GDPs used to nurture tactical responses to errors and
             blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
+        -   [Use of GDPs to support debugging and the product revision
+            process - EDIT DOWN AND
+            MOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-move)
+        -   [Other examples of GDP driving adoption of technical
+            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
+        -   [Use of evolving GDP terminology to facilitate working
+            practices - IS THERE ENOUGH HERE FOR A WHOLE
+            SECTION?](#use-of-evolving-gdp-terminology-to-facilitate-working-practices---is-there-enough-here-for-a-whole-section)
 -   [Cultural Dimension](#cultural-dimension)
     -   [GDPs can encourage learners to design for others - ALSO LINKED
-        TO IDEATION? - is this guided
-        participation?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation---is-this-guided-participation)
+        TO
+        IDEATION?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation)
     -   [The propagation of use of GDPs through
         playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
     -   [GDPs facilitate the use of wider funds of
