--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,8 +9,6 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
@@ -21,33 +19,40 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         A](#descriptive-commentary-on-vignette-a)
 -   [Observations and analysis of use of Game Design Patterns by
     participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
--   [Guided Particpation](#guided-particpation)
-    -   [GDPs used to scaffold ideation
-        processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [GDPs as used by participants in their prioritisation in the
-            design
-            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-design-process)
+-   [Personal Appropriation](#personal-appropriation)
+    -   [GDPs used to explore computational, design and systems concepts
+        from a perspective of personal
+        appropriation](#gdps-used-to-explore-computational-design-and-systems-concepts-from-a-perspective-of-personal-appropriation)
+-   [Guided Participation](#guided-participation)
     -   [GDPs offer the potential to assist project navigation, acting
         as a framework for code examples and step-by-step
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+    -   [GDPs used to scaffold ideation
+        processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [Paper prototyping mapping visual
+            matrix](#paper-prototyping-mapping-visual-matrix)
+        -   [GDPs as used by participants in their prioritisation in the
+            ideation
+            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
     -   [GDPs aiding the process of division of
         labour](#gdps-aiding-the-process-of-division-of-labour)
-    -   [GDP driving adoption of emerging technical
-        processes](#gdp-driving-adoption-of-emerging-technical-processes)
-        -   [GDPs used to nurture tactical responses to errors and
-            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
-        -   [Use of GDPs to support debugging and the product revision
-            process - EDIT DOWN AND
-            MOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-move)
+    -   [The role of GDP used in emerging tool use, technical processes
+        and specialist
+        language](#the-role-of-gdp-used-in-emerging-tool-use-technical-processes-and-specialist-language)
         -   [Other examples of GDP driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-        -   [Use of evolving GDP terminology to facilitate working
-            practices - IS THERE ENOUGH HERE FOR A WHOLE
-            SECTION?](#use-of-evolving-gdp-terminology-to-facilitate-working-practices---is-there-enough-here-for-a-whole-section)
+    -   [GDPs in relation to project revision and
+        debugging](#gdps-in-relation-to-project-revision-and-debugging)
+        -   [Code Patching as a guided
+            process](#code-patching-as-a-guided-process)
+        -   [GDPs used to nurture tactical responses to errors and
+            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
+        -   [Concluding remarks on debugging and
+            revision](#concluding-remarks-on-debugging-and-revision)
 -   [Cultural Dimension](#cultural-dimension)
     -   [GDPs can encourage learners to design for others - ALSO LINKED
-        TO
-        IDEATION?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation)
+        TO IDEATION? - is this guided
+        participation?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation---is-this-guided-participation)
     -   [The propagation of use of GDPs through
         playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
     -   [GDPs facilitate the use of wider funds of
@@ -834,21 +839,12 @@ Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small squ
  -->
 
 
-
-
-### Use of GDPs to support debugging and the product revision process
+### GDPs in relation to project revision and debugging
 
 _NOTE - This section is particularly underdeveloped at this stage_
 
-Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
+NOTE this section is not related to GDPs.
 
-<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
-
-The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors emerging as explored in the previous chapter. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
-
-<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
-CAN i FIND ANY KEY EXAMPLES OF THIS?
--->
 
 #### Code Patching as a guided process
 
@@ -858,7 +854,7 @@ During this process of careful documentation I became concerned that over facili
 
 
 
-#### GDPs used to nurture tactical responses to errors and blockages
+#### GDPs used to nurture tactical responses to coding errors
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
@@ -886,11 +882,24 @@ For example,  on into the detail and types or errors.  These include:
   -   **Glitches** don't stop your game from running but as you play you see that there is an unintended effect. The game does something different from what we want it to do.
 
 
- Perhaps see the above glitch examples. Not fully understanding every line of code can create a fun, unpredictable environment. We can infer from these examples that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design encourage this kinds of error. Certainly the process of code patching does.
+Perhaps see the above glitch examples. Not fully understanding every line of code can create a fun, unpredictable environment. We can infer from these examples that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design encourage this kinds of error. Certainly the process of code patching does.
 
- In a similar way that the initial provisions of a broken games are valuable to engage initial participation, the becoming of a broken GDP state, has similar potential. EXPLAIN?
+In a similar way that the initial provisions of a broken games are valuable to engage initial participation, the becoming of a broken GDP state, has similar potential. EXPLAIN?
 
- This area show potential but is under explored. However, just surfacing the issue feels valid in terms of useful stream of facilitator practice to explore.
+This area show potential but is under explored. However, just surfacing the issue feels valid in terms of useful stream of facilitator practice to explore.
+
+
+#### Concluding remarks on debugging and revision
+
+Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
+
+<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
+
+The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
+
+<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
+CAN i FIND ANY KEY EXAMPLES OF THIS?
+-->
 
 
 
@@ -974,7 +983,10 @@ May need a way to differential this chapters discussion of GDP - and that of the
 
 ## Cultural Dimension
 
-### GDPs can encourage learners to design for others - ALSO LINKED TO IDEATION? - is this guided participation?
+### The role of GDPs to facilitate learners to design for others
+
+<!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
+
 
 **Referring to GDPs (especially during playtesting) can help scaffold the process of imagining the end user experiences.**
 
