--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,6 +9,7 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
@@ -45,16 +46,20 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         debugging](#gdps-in-relation-to-project-revision-and-debugging)
         -   [Code Patching as a guided
             process](#code-patching-as-a-guided-process)
-        -   [GDPs used to nurture tactical responses to errors and
-            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
+        -   [GDPs used to nurture tactical responses to coding
+            errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
         -   [Concluding remarks on debugging and
             revision](#concluding-remarks-on-debugging-and-revision)
 -   [Cultural Dimension](#cultural-dimension)
-    -   [GDPs can encourage learners to design for others - ALSO LINKED
-        TO IDEATION? - is this guided
-        participation?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation---is-this-guided-participation)
-    -   [The propagation of use of GDPs through
-        playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+    -   [The role of GDPs to facilitate learners to design for
+        others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+    -   [Role of playtesting and feedback and
+        GDPs](#role-of-playtesting-and-feedback-and-gdps)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
+            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+        -   [The propagation of use of GDPs through
+            playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
         -   [Problem solving practices as a fund of knowledge (but not
@@ -440,7 +445,7 @@ A transition note here. this section explores data on the use of GDP from the pe
 <!--
 NOTE THIS HAS BEEN REMOVED
 ## The use of GDPs examined from an interpersonal focus
-This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Ch1 in adding levels to his game
+This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Bertie  in adding levels to his game
 . -->
 
 
@@ -1049,25 +1054,100 @@ AND SO? -->
 
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
-### The propagation of use of GDPs through playtesting
+
+### Role of playtesting and feedback and GDPs
+
+
+#### GDP concepts and language used in informal feedback for peers to influence modification of games
+
+**The concepts of game challenge and game feel evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
+
+The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction during playtesting.
+
+The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity.
+
+Parent Molly had been focused mostly on completing asset design. The only changes she had made to the deliberately frustrating initial player movement (discussed in design chapter) was to change player jump velocity. Player jump (y) velocity was set very high but left right (x) velocity was slow. This created a very frustrating game feel.
+
+She had been made aware by her daughter Ne about the relevant game variables. In response, Molly asked for advice but Ne gave none walking away. Molly noted "She's left me to my own devices."
+
+Bertie: That looks nice (referring to the graphical look of the game)
+
+Molly invites Bertie to play as she can't progress due to the difficult game controls.
+
+Bertie: It jumps super high but so slow  
+Pause
+Molly: He has to go slow be  cause he's an astronaut, you see.    
+Bertie: It's hard.
+Bertie leaves.
+Molly: (to peer parent with serious tone.) It's hard. Wow.
+
+Ed comes to play the game.
+Ed: How much jump speed to you have?
+Ed: Your jump speed is massive.
+
+
+Other children come and play the game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating." In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
+
+<!-- We can see that Molly justifies the game feel of a very high fast jump with a narrative response about the character being spaceman. However, the limited amount of time anyone plays her game and her own frustration in playing it is telling. The game feel is frustrating in the wrong way here. Molly seems to initially misconstrue the feedback she is getting here equating her ability to make the game hard as a positive thing. However, towards the end she notes the frustrating nature of the game. -->
+
+
+<!-- The same message is delivered in a variety of ways, above we can see feedback from Mick trying to bridge a technical and conversational approach, direct feedback of the personal challenge level and an interpretation of the cause from Bertie and then a more specifically technical explanation involving the naming of the variable _jump speed_. -->
+
+
+<!-- The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies. The term _game feel_  has varied interpretation but is generally framed as the responsiveness and feeling of control over the main character during the core movement of the game. In this case, it effects the ability of players to move between platforms and avoid enemies. In this design the jump mechanic is determined by the use of variables controlling gravity, jump velocity and movement velocity. -->
+
+<!-- The importance of these variables to is was behind the design decision to place these variable right at the top of the code and to rename them with player centric names rather than mathematical terms like velocity and acceleration.   -->
+
+<!-- NOTE - BE SURE TO EXPLORE THIS IN SOME DETAIL IN DESIGN CHAPTER -->
+
+<!-- The regular playtesting of games allowed participants to give each other feedback regularly and game feel was one of the aspects that young people in particular to gave frequent feedback on. -->
+
+<!-- Parent Molly had been focused mostly on completing asset design. She had been made aware by her daughter Ne about the relevant game variables. -->
+
+<!-- PERHAPS INSERT HOW - SCREEN SHOT? -->
+
+<!-- In response, Molly asked for advice but Ne gave none walking away. Molly noted "She's left me to my own devices."
+
+Player jump (y) velocity was set very high but left right (x) velocity was slow. This created a very frustrating game feel. The following is a compilation of feedback comments or reactions over a 15 minute time period.   
+
+    Molly:  (Talking to self) No! It's so hard that. (referring to a particular jump in her game.)
+    Mick: How are you getting on Mi? It's looking good.
+    Mick: (Noting frustrated air of Mi) Have you made it to hard.
+    Molly:  I don't know. Can you jump from here to here with this.. this.. him? (point to main character)
+    Mick: So it look like you bump your head and fall down.
+    Mick: One bit of friendly feedback that I would give you is that it's taking a long time to move left and right. And that is something that you can change if you want to.
+    Molly:  Oh right yeah.direct
+    Mick: Yeah.
+    Molly:  Yeah, actually that's a good idea.
+    Mick: If you think about average games. Your average jump time would be about one second in the air. So that can be a bit of guide sometimes.   -->
+    <!-- PERHAPS INSERT HOW - SCREEN SHOT? -->
+
+
+<!-- As a facilitator, I shared feedback about the frustratingly slow movement time and an indirect feedback on the high velocity jump value. I use quite indirect language when giving feedback and while I reference Mi's frustration rather than giving direct feedback. -->
+
+
+<!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
+
+
+#### The propagation of use of GDPs through playtesting
 
 **The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
 NOTE CAN THIS FOCUS ON NON TEMPLATED GDPs?
 
-For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Te, agreeing to show another child Ch1 how to add new levels.
+For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Te, agreeing to show another child Bertie  how to add new levels.
 
-    Ch1: Why’s that enemy in every level
+    Bertie: Why’s that enemy in every level
     Toby: He’s not.
-    Ch1: Can you show me how you add more levels on to yours?
+    Bertie: Can you show me how you add more levels on to yours?
     Toby: Yeah sure.
     Pause
     Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
     Pause
-    Ch1: It’s like parcours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
+    Bertie: It’s like parcours in Minecraft but times. It’s like playing the game Wipeout. Have you ever played Wipeout?
     Toby: Er not really.
-    Ch1: Or seen it?
-    Ch1: That’s like my second level.
+    Bertie: Or seen it?
+    Bertie: That’s like my second level.
     Toby: Ah so hard (Tobyfails at a high level on his game and starts to move off)
     Toby: (To someone else  calling for attention)  No I’m helping (Ch)..
     _(Tobythen follows Bertie to his workstation to help him implement more levels.)_
@@ -1177,33 +1257,11 @@ Thus in this xample the family bring their knowledge of game play patterns and g
 Other families? examples with GDDP. -->
 
 
-
 <!--
 Article on intangibility of game feel.
  https://www.gamedeveloper.com/design/game-feel-the-secret-ingredient -->
 <!-- #### Use of hazards and moving enemies - The placement of hazards as design pattern to increase challenge -->
 <!-- GDPs and play-testing interact to allow participants,  to support each other and build community in a diversity of ways. -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
